<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_note">Welcome to ALC 4.0</string>
    <string name="about_alc">ABOUT ALC</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="my_name">Phena Mwema</string>
    <string name="track">Track:</string>
    <string name="android">Android</string>
    <string name="country">Country:</string>
    <string name="kenya">Kenya</string>
    <string name="email">Email:</string>
    <string name="email_address">mwemap12@gmail.com</string>
    <string name="phone_number">Phone Number:</string>
    <string name="number">0754136506</string>
    <string name="slack_username">"@Phena Mwema"</string>
    <string name="username">Slack Username:</string>
    <string name="title_activity_about_alc">About ALC</string>
    <string name="load_error">Couldn\'t load page</string>
</resources>
